# ChangeLog for app-doc/casting-spels-emacs
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  06 Dec 2007; Christian Faulhammer <opfer@gentoo.org>
  casting-spels-emacs-19.ebuild:
  mimic ndash instead of normal dash in DESCRIPTION

  05 Dec 2007; Ulrich Mueller <ulm@gentoo.org>
  +files/50casting-spels-emacs-gentoo.el, +metadata.xml,
  +casting-spels-emacs-19.ebuild:
  Initial import. Ebuild contributed by me.
