@@ -1,5 +1,4 @@
-AUX 50casting-spels-emacs-gentoo.el 88 RMD160 abefc3903f42ea493d99f67bf9ec1d0a0b598fca SHA1 6aef3ceafac7f6f65eb895fe14eec9dc1320f70a SHA256 58af8b7cd1eed056d97f5e86405fcb774368edfe71bb38d1e9862580c78c6e7e
 DIST casting-spels-emacs-v19.zip 1883707 RMD160 b4f4f8e18534c4834b5507c36996d3bee388b5a2 SHA1 2bb4363d6774f6400e9371042d244cb37a8abfbe SHA256 aa2e33449375db66577f80b7246ece75e75b04dc6f97fbc8ca9365579db16f3a
-EBUILD casting-spels-emacs-19.ebuild 855 RMD160 c090391bbe2e552093f912482911f56002a1526c SHA1 af4f07e8530a4d80399a5711e03031ddb0b1b230 SHA256 44a88c38ee58288357248de5d63615632bd6520bc1a344c2448471f087c0fad5
-MISC ChangeLog 452 RMD160 a25e6f9844936e7d737bc8026a0dcb3fea28a972 SHA1 a6e67406b485a0a6737ef53e9c1bf408bbb73ce1 SHA256 cddffe6ab3a9442e4be6c945335889d5f2163dd82ce2871508c3d0108137bc04
+EBUILD casting-spels-emacs-19.ebuild 745 RMD160 d7e714ddce876cca60abd9c44df55ffb0e9576cc SHA1 ee38d479d63ded63ad34809a9b4b117816220357 SHA256 11b6a8683322745a387216f23a4d2c38daea39903ce5a8f89d939338a6422077
+MISC ChangeLog 605 RMD160 2a7cd55ebeaf4219a6e2476c2285611dc4acc1cd SHA1 464ed3fdfadeaf26863cb79311f734cae4b58ba6 SHA256 aceda8ca49f0544a16e088b9859789ff248f9dec87004bb73ebde970b8f145df
 MISC metadata.xml 158 RMD160 415d172437ca754d24fc5ab186ba8e77934d96e4 SHA1 61f6eff9729cd87a725c2a70c81aca4270a17fc4 SHA256 1393bdef3a74343fdb40a112c7096a1af16f67e7a43413250de28dfe73810eab
