@@ -1,4 +1,0 @@
-
-;;; casting-spels-emacs site-lisp configuration
-
-(add-to-list 'load-path "@SITELISP@")
